--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "engines": {
     "node": ">=14.20.1"
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13"
   }
